--- a/config/rails.yml
+++ b/config/rails.yml
@@ -27,6 +27,9 @@ Layout/CaseIndentation:
 Layout/CommentIndentation:
   Enabled: true
 
+Layout/EmptyLineAfterMagicComment:
+  Enabled: true
+
 # No extra empty lines.
 Layout/EmptyLines:
   Enabled: true
