Exclude db/schema.rb

--- a/config/rails.yml
+++ b/config/rails.yml
@@ -9,6 +9,7 @@ AllCops:
     - '**/vendor/**/.*'
     - '**/node_modules/**/*'
     - 'actionpack/lib/action_dispatch/journey/parser.rb'
+    - 'db/schema.rb'
 
 # Prefer &&/|| over and/or.
 Style/AndOr:
