Update `FrozenStringLiteralComment` Include & Exclude

--- a/config/rails.yml
+++ b/config/rails.yml
@@ -87,7 +87,18 @@ Style/FrozenStringLiteralComment:
   EnforcedStyle: always
   Include:
     - 'activesupport/**/*'
+    - 'activemodel/**/*'
+    - 'actioncable/**/*'
     - 'activejob/**/*'
+    - 'activerecord/**/*'
+    - 'actionmailer/**/*'
+    - 'actionview/**/*'
+    - 'actionpack/**/*'
+  Exclude:
+    - 'actionview/test/**/*.builder'
+    - 'actionview/test/**/*.ruby'
+    - 'actionpack/test/**/*.builder'
+    - 'actionpack/test/**/*.ruby'
 
 # Use `foo {}` not `foo{}`.
 Layout/SpaceBeforeBlockBraces:
