Style/FrozenStringLiteralComment: exclude autogenerated db/*.rb

--- a/config/rails.yml
+++ b/config/rails.yml
@@ -91,6 +91,8 @@ Style/FrozenStringLiteralComment:
     - 'actionpack/test/**/*.builder'
     - 'actionpack/test/**/*.ruby'
     - 'activestorage/db/migrate/**/*.rb'
+    - 'db/migrate/**/*.rb'
+    - 'db/*.rb'
 
 # Use `foo {}` not `foo{}`.
 Layout/SpaceBeforeBlockBraces:
