--- a/config/rails.yml
+++ b/config/rails.yml
@@ -60,6 +60,9 @@ Layout/IndentationConsistency:
 Layout/IndentationWidth:
   Enabled: true
 
+Layout/LeadingCommentSpace:
+  Enabled: true
+
 Layout/SpaceAfterColon:
   Enabled: true
 
