--- a/config/rails.yml
+++ b/config/rails.yml
@@ -78,6 +78,9 @@ Layout/SpaceAroundKeyword:
 Layout/SpaceAroundOperators:
   Enabled: true
 
+Layout/SpaceBeforeComma:
+    Enabled: true
+
 Layout/SpaceBeforeFirstArg:
     Enabled: true
 
