Enable `Style/ColonMethodCall` cop
Refer https://github.com/rails/rails/commit/9c0c90979a759a41628e0cd9d73821b0b34d03fc.

--- a/config/rails.yml
+++ b/config/rails.yml
@@ -160,3 +160,7 @@ Style/RedundantReturn:
 Style/Semicolon:
   Enabled: true
   AllowAsExpressionSeparator: true
+
+# Prefer Foo.method over Foo::method
+Style/ColonMethodCall:
+  Enabled: true
