Import new `CustomCops/RefuteNotTest` cop from rails/rails
This PR imports rails/rails#32441.

IMO, I think that it would be more plausible to write
`require: rubocop-rails` instead of `require: custom_cops`
in config/rails.yml, but first of all this PR writes
`require: custom_cops` according to upstream.

--- a/config/rails.yml
+++ b/config/rails.yml
@@ -1,3 +1,5 @@
+require: custom_cops
+
 AllCops:
   TargetRubyVersion: 2.2
   # RuboCop has a bunch of cops enabled by default. This setting tells RuboCop
@@ -9,6 +11,11 @@ AllCops:
     - '**/vendor/**/.*'
     - '**/node_modules/**/*'
     - 'actionpack/lib/action_dispatch/journey/parser.rb'
+
+# Prefer assert_not_x over refute_x
+CustomCops/RefuteNot:
+  Include:
+    - '**/*_test.rb'
 
 # Prefer &&/|| over and/or.
 Style/AndOr:
