--- a/config/rails.yml
+++ b/config/rails.yml
@@ -38,6 +38,13 @@ Layout/CommentIndentation:
 Layout/ElseAlignment:
   Enabled: true
 
+# Align `end` with the matching keyword or starting expression except for
+# assignments, where it should be aligned with the LHS.
+Layout/EndAlignment:
+  Enabled: true
+  EnforcedStyleAlignWith: variable
+  AutoCorrect: true
+
 Layout/EmptyLineAfterMagicComment:
   Enabled: true
 
@@ -148,13 +155,6 @@ Layout/TrailingWhitespace:
 # Use quotes for string literals when they are enough.
 Style/UnneededPercentQ:
   Enabled: true
-
-# Align `end` with the matching keyword or starting expression except for
-# assignments, where it should be aligned with the LHS.
-Lint/EndAlignment:
-  Enabled: true
-  EnforcedStyleAlignWith: variable
-  AutoCorrect: true
 
 # Use my_method(my_arg) not my_method( my_arg ) or my_method my_arg.
 Lint/RequireParentheses:
