--- a/config/rails.yml
+++ b/config/rails.yml
@@ -15,7 +15,7 @@ AllCops:
 # Prefer assert_not_x over refute_x
 CustomCops/RefuteNot:
   Include:
-    - '**/*_test.rb'
+    - '**/test/**/*'
 
 # Prefer &&/|| over and/or.
 Style/AndOr:
