--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ sudo: false
 language: ruby
 cache: bundler
 before_install:
-  - gem update --system --no-document
+  - gem install bundler
 rvm:
   - 2.2.2
   - 2.3.7
   - 2.4.4
-  - 2.5.0
+  - 2.5.1
