--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 sudo: false
 language: ruby
 cache: bundler
+before_install:
+  - gem install bundler
 rvm:
-  - 2.3.3
+  - 2.2.2
+  - 2.3.7
+  - 2.4.4
+  - 2.5.1
