--- a/config/rails.yml
+++ b/config/rails.yml
@@ -160,6 +160,9 @@ Style/UnneededPercentQ:
 Lint/RequireParentheses:
   Enabled: true
 
+Lint/StringConversionInInterpolation:
+  Enabled: true
+
 Style/RedundantReturn:
   Enabled: true
   AllowMultipleReturnValues: true
